--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3'
 services:
   angular:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: "jenkins-angular"
+    environment:
+      env: prod
     ports:
-      - "4200:4200"
+      - "80:80"
+
